<resources>
    <string name="app_name">AleBeer</string>
    <string name="error_no_internet">No Internet Connection</string>
    <string name="error_timeout">Oops! Slow Connection</string>
    <string name="error_unknown">Unknown Error! That’s all we know</string>
    <string name="description">Description:\n\n %1$s</string>
    <string name="beer">Beer</string>
    <string name="favorite">Favorite</string>
    <string name="beer_image">Beer Image</string>
    <string name="note_hint">Add your note here</string>
    <string name="save">Save</string>
    <string name="unknow_event">Unknow event</string>
    <string name="saving">Saving</string>
    <string name="sale_off_in">"Sale Off In: %s"</string>
    <string name="count_down">Count down: %s</string>
    <string name="nothing_here">Nothing here</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
</resources>
